--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@angular/http": "^7.2.16",
     "@angular/material": "^8.2.3",
     "moment": "^2.24.0",
+    "ng-open-cv": "^0.3.1",
     "ngx-mat-datetime-picker": "^1.0.3",
-    "ngx-material-file-input": "^2.1.0",
+    "ngx-material-file-input": "^2.1.1",
+    "opencv.js": "^1.2.1",
     "rxjs": "~6.4.0",
     "sweetalert2": "^11.7.5",
     "tslib": "^1.9.0",
@@ -26,17 +28,17 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.6",
-    "@angular/animations": "^8.0.3",
-    "@angular/cli": "^8.0.6",
-    "@angular/common": "^8.0.3",
-    "@angular/compiler": "^8.0.3",
-    "@angular/compiler-cli": "^8.0.3",
-    "@angular/core": "^8.0.3",
-    "@angular/forms": "^8.0.3",
-    "@angular/language-service": "^8.0.3",
-    "@angular/platform-browser": "^8.0.3",
-    "@angular/platform-browser-dynamic": "^8.0.3",
-    "@angular/router": "^8.0.3",
+    "@angular/animations": "^8.2.14",
+    "@angular/cli": "^8.3.29",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
